@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0100
+// generated by Fast Light User Interface Designer (fluid) version 1.0101
 
 #include "../FL/Fl_Help_Dialog.H"
 #include "flstring.h"
@@ -11,8 +11,8 @@ inline void Fl_Help_Dialog::cb_view__i(Fl_Help_View*, void*) {
 
   if (index_ >= 100)
   {
-    memcpy(line_, line_ + 10, sizeof(line_[0]) * 90);
-    memcpy(file_, file_ + 10, sizeof(file_[0]) * 90);
+    memmove(line_, line_ + 10, sizeof(line_[0]) * 90);
+    memmove(file_, file_ + 10, sizeof(file_[0]) * 90);
     index_ -= 10;
   }
 
